# Porfolio

Booksta/: README.md  docker-compose.yaml
Booksta/backend/: Dockerfile
Booksta/backend/booksta/: Dockerfile  pom.xml
Booksta/backend/booksta/data/: bookstadb.mv.db
Booksta/frontend/: Dockerfile
Booksta/frontend/booksta/: .env  .env.production  .firebaserc  package-lock.json  project-structure.html
Booksta/frontend/booksta/.firebase/: hosting.YnVpbGQ.cache  hosting.cHVibGlj.cache
Booksta/frontend/booksta/src/: App.test.js  index.js
Booksta/terraform/: .debug-dev.sh  .debug-prod.sh  main.tf  terraform.tfvars  variables.tf
Booksta/terraform/envs/: versions.tf
BrainQuizz/app/: build.gradle.kts
Odoo/project/interview_feedback/: db.sqlite3
Oxono/: pom.xml
SGBD_Neo4j_Mongo__Redis_ElasticSearch/Projet/docker/: docker-compose.yml
Synthétiseur/62496/: AudioGenerator.h  CMakeLists.txt  Delay.h  Envelope.h  Filter.h  MainWindow.h  Oscillator.h  SynthParameters.h
Synthétiseur/62496/src/: AudioGenerator.cpp  Delay.cpp  Envelope.cpp  Filter.cpp  MainWindow.cpp  Oscillator.cpp  SynthParameters.cpp  main.cpp
TypoRacer/: README.md
TypoRacer/TypoRacer/: .gitignore  pom.xml
TypoRacer/TypoRacer/archive/: ClassementController.java
TypoRacer/TypoRacer/external-data/: Texte.db
academic-projects/BrainQuizz/: settings.gradle.kts
academic-projects/BrainQuizz/gradle/: libs.versions.toml
academic-projects/Odoo/project/: docker-compose.yml  review
academic-projects/SGBD_Neo4j_Mongo__Redis_ElasticSearch/Projet/: README.md  pom.xml
academic-projects/attendo-g62496/: README.md  tailwind.config.js
academic-projects/attendo-g62496/src/: main.js
academic-projects/pacman_multiagent/: multiAgents.py
attendo-g62496/: .env  db_cluster-02-06-2025@09-22-08.backup  package-lock.json  package.json
attendo-g62496/src/: App.vue
attendo-g62496/src/components/: Breadcrumb.vue
attendo-g62496/src/service/: epreuveService.js
attendo-g62496/src/views/: APropos.vue  Presence.vue  Sessions.vue
frontend/: package-lock.json  package.json  project-structure.html  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js
frontend/src/api/: client.js
frontend/src/components/: PrivateRoute.jsx
frontend/src/hooks/: useToast.js
frontend/src/routes/: AppRoutes.jsx
oxono-g62496/: pom.xml
(+652 files in other folders)
